[package]
name = "abnf-core"
description = "A nom-based parser for ABNF core rules."
version = "0.2.0"
authors = ["Damian Poddebniak <poddebniak@fh-muenster.de>"]
readme = "README.md"
license = "AGPL-3.0"
edition = "2018"

repository = "https://github.com/duesee/abnf-core"
keywords = ["abnf", "core", "parser", "nom"]

[dependencies]
nom = "5"
