[package]
name = "abnf-core"
description = "A nom-based parser for ABNF core rules."
version = "0.5.0"
authors = ["Damian Poddebniak <poddebniak@fh-muenster.de>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"

repository = "https://github.com/duesee/abnf-core"
keywords = ["abnf", "core", "rules", "parser", "nom"]

[dependencies]
nom = "7.1.3"
